k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubeportal-frontend-service
  namespace: sachs
spec:
  ports:
  - protocol: TCP
    port: 8080
  selector:
    app: kubeportal-frontend
